Fixed mobile z-index issue with popups.

--- a/app/styles/popup.less
+++ b/app/styles/popup.less
@@ -52,6 +52,7 @@ html{
     width: 100%;
     color: @charcoal;
     visibility: visible;
+    z-index: 9999 !important;
 
     a {
         color: @charcoal;
